test/elaboration/bad/typeclass_instance_non_trivial_index.mle
(* Restriction made in the parser.mly in the instance declaration rule. *)

class H 'a { x : 'a }
type ('a, 'b) o = O of 'a * 'b
instance ['a] H 'a => H (('a, int) o) { x = O['a] (x['a]) }
instance ['a] H 'a => H (('a, char) o) { x = O['a] (x['a]) }
